# polkadot-registrar-challenger

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Dockerfile  MANUAL_VERIFICATION.md  README.md  config.sample.json  docker-compose.yml  index.html  renovate.json
.circleci/: config.yml
.devcontainer/: Dockerfile
.github/: dependabot.yml
.github/workflows/: codeql.yml  gh-pages.yml
assets/: bundle.js  custom.css
charts/polkadot-registrar-challenger/: Chart.yaml  values.yaml
charts/polkadot-registrar-challenger/templates/: certificate.yaml  configmap.yaml  cronjob-pod-restart.yaml  deployment.yaml  ingress.yaml  role-pod-restarter.yaml  rolebinding-pod-restarter.yaml  service.yaml  serviceaccount-pod-restarter.yaml  statefulset.yaml
config/: sample.adapter_listener.yaml  sample.session_notifier.yaml  sample.single_instance.yaml
helmfile.d/: 00-mongodb.yaml  00-registrar-challenger.yaml  01- nginx.yaml  01-mongo-express.yaml  05-registrar-watcher.yaml  10-registrar-challenger.yaml
helmfile.d/config/: 05-registrar-challenger-values.adapter_listener.yaml.gotmpl  10-registrar-challenger-values.session_notifier.yaml.gotmpl  mongo-express.yaml.gotmpl  mongodb.yaml.gotmpl  registrar-challenger-values.yaml.gotmpl  registrar-watcher-values.yaml.gotmpl
helmfile.d/config/adapter_listener/: registrar-challenger-values.yaml.gotmpl
helmfile.d/config/integration-test/: registrar-challenger-values.yaml.gotmpl  registrar-watcher-values.yaml.gotmpl
helmfile.d/config/kusama/: registrar-challenger-values.yaml.gotmpl  registrar-watcher-values.yaml.gotmpl
helmfile.d/config/polkadot/: registrar-challenger-values.yaml.gotmpl  registrar-watcher-values.yaml.gotmpl
helmfile.d/config/registrar-test/: registrar-challenger-values.yaml.gotmpl
helmfile.d/config/session_notifier/: registrar-challenger-values.yaml.gotmpl
messages/: instructions
scripts/: integration-tests.sh
sql/: init.sql
src/: account_fetch.rs  api.rs  comms.rs  connector.rs  database.rs  db.rs  display_name.rs  event.rs  health_check.rs  identity.rs  lib.rs  listener.rs  manager.rs  notifier.rs  primitives.rs  projection.rs  remark_watcher.rs  state.rs  state_projection.rs  verifier.rs
src/actors/: connector.rs  mod.rs  verifier.rs
src/actors/api/: display_name_check.rs  judgement_state.rs  mod.rs  second_challenge.rs
src/adapter/email/: Cargo.toml
src/adapter/email/src/: lib.rs
src/adapters/: admin.rs  display_name.rs  email.rs  matrix.rs  mocks.rs  mod.rs  twitter.rs
src/aggregate/: display_name.rs  message_watcher.rs  mod.rs  remark.rs  request_handler.rs  response_handler.rs  verifier.rs
src/api/: display_name_check.rs  judgement_state.rs  mod.rs  second_challenge.rs
src/api_v2/: lookup_server.rs  mod.rs  session.rs
src/primitives/: Cargo.toml
src/primitives/src/: database.rs  lib.rs  types.rs
src/projection/: identity_change_notifier.rs  judgment_giver.rs  message_verifier.rs  mod.rs  session_notifier.rs
src/sql/: init.sql  local_fresh.sh
src/system/: mod.rs
src/tests/: aggregate_verifier.rs  api.rs  api_account_status.rs  api_judgement_state.rs  background_tasks.rs  display_name_verification.rs  email_adapter.rs  explicit.rs  live_mocker.rs  matrix_adapter.rs  mocks.rs  mod.rs  process_admin_cmds.rs  rpc_api_service.rs  twitter_adapter.rs  verifier_aggregate.rs  verify_matrix.rs
tests/mocks/: mod.rs
www/: build.sh  config.json  custom.css  index.html  package-lock.json  package.json  tsconfig.json
www/src/: content.ts  custom.scss  index.ts  json.ts  notifications.ts
