[package]
name = "registrar"
version = "0.2.37"
authors = ["lamafab <42901763+lamafab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "system"
path = "src/lib.rs"

[[bin]]
name = "registrar"
path = "src/bin/main.rs"

[dependencies]
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio = { version = "1.15.0", features = ["macros", "time", "process", "rt-multi-thread" ] }
futures = "0.3.19"
mongodb = { version = "2.0.0-beta", features = ["bson-u2i"] }
bson = "2.0.0-beta"
reqwest = "0.11.9"
urlencoding = "1.3.3"
async-trait = "0.1.40"
actix = { version = "0.13.0", features = ["macros"]}
actix-web = "4.0.1"
actix-broker = "0.4.2"
actix-codec = "0.5.0"
actix-web-actors = "4.1.0"
actix-cors = "0.6.1"
actix-test = "0.1.0-beta.3"
awc = "3.0.0-beta.7"
thiserror = "1.0.23"
anyhow = "1.0.57"
serde = "1.0.133"
serde_json = "1.0.75"
serde_yaml = "0.8.15"
matrix-sdk = "0.3.0"
ruma = "0.2.0"
lettre = "0.9.0"
lettre_email = "0.9.4"
imap = "2.4.1"
mailparse = "0.13.0"
native-tls = "0.2.4"
hmac = "0.12.0"
sha-1 = "0.10.0"
sha2 = "0.10.1"
base64 = "0.13.0"
url = "2.1.1"
rand = "0.8.4"
hex = "0.4.2"
strsim = "0.10.0"

[dev-dependencies]
actix-http = "3.0.0-beta.6"
