[package]
name = "registrar"
version = "0.3.4"
authors = ["lamafab <42901763+lamafab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "system"
path = "src/lib.rs"

[[bin]]
name = "registrar"
path = "src/bin/main.rs"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio = { version = "1.26.0", features = ["macros", "time", "process", "rt-multi-thread" ] }
futures = "0.3.27"
mongodb = "2.4.0"
bson = "2.6.1"
reqwest = "0.11.15"
urlencoding = "2.1.2"
async-trait = "0.1.79"
actix = { version = "0.13.0", features = ["macros"]}
actix-web = "4.3.1"
actix-broker = "0.4.3"
actix-codec = "0.5.0"
actix-web-actors = "4.2.0"
actix-cors = "0.6.4"
actix-test = "0.1.1"
awc = "3.0.0-beta.7"
thiserror = "1.0.40"
anyhow = "1.0.70"
serde = "1.0.158"
serde_json = "1.0.94"
serde_yaml = "0.9.19"
matrix-sdk = "0.3.0"
ruma = "0.2.0"
lettre = "0.10.3"
imap = "2.4.1"
mailparse = "0.14.0"
native-tls = "0.2.4"
hmac = "0.12.0"
sha-1 = "0.10.1"
sha2 = "0.10.6"
base64 = "0.21.0"
url = "2.3.1"
rand = "0.8.5"
hex = "0.4.3"
strsim = "0.10.0"

[dev-dependencies]
actix-http = "3.0.0-beta.6"
