[package]
name = "primitives"
version = "0.2.29"
authors = ["lamafab <42901763+lamafab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
rand = "0.8.4"
hex = "0.4.2"
sqlx = { version = "0.5.10", features = ["runtime-tokio-native-tls", "postgres", "offline"] }
