[package]
name = "registrar"
version = "0.2.29"
authors = ["lamafab <42901763+lamafab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "adapter_email"
path = "src/lib.rs"

[dependencies]
primitives = { path = "../../primitives" }
log = { version = "0.4.11", features = ["serde"] }
tokio = { version = "1.15.0", features = ["macros", "time", "process", "rt-multi-thread" ] }
sqlx = { version = "0.5.10", features = ["runtime-tokio-native-tls", "postgres", "offline"] }
anyhow = "1.0.52"
lettre = "0.9.0"
lettre_email = "0.9.4"
imap = "2.4.1"
mailparse = "0.13.0"
